test/fail/fail_multiple/src/FailMultiple.hx
package;

class FailMultiple {
	public static function funA(n:Int):Int {
		return -n;
	}

	public static function funB(n:Int):Int {
		return n * n;
	}
}
